# Gcode

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  skills-lock.json
.agents/skills/setup-matt-pocock-skills/: SKILL.md
.agents/skills/zoom-out/: SKILL.md
.claude/skills/: lark-attendance  lark-markdown  lark-okr  lark-slides
deploy/: .env.template  gcode-mcp-server.service  gcode-security-guard.service  setup.sh
src/api/: server.py
src/contracts/: __init__.py
src/gcode/alert/: __init__.py  channels.py  dedup.py  engine.py  models.py  router.py
src/gcode/cli/: chat.py
src/gcode/logpipe/: __init__.py  detector.py  models.py  parser.py  pipeline.py  source.py  sources.py
src/gcode/mcp/: tool_dispatcher.py  tools_management.py
src/gcode/monitor/: __init__.py  checker.py  collector.py  models.py  threshold.py
src/intent/: classifier.py  model.py
