[project]
name = "gcode"
version = "0.1.0"
description = "Gcode: 麒麟OS智能运维Agent — 对话式高效运维，杜绝误操作与安全风险"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.46",
    "torch>=2.4",
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
reasoner-openai = ["openai>=1.0"]
reasoner-anthropic = ["anthropic>=0.30"]
reasoner = ["openai>=1.0", "anthropic>=0.30"]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
